# discord-webhook

./: Cargo.toml  README.md
src/: lib.rs  structures.rs
tests/: functions.rs  send_text.rs
