[package]
name = "discord-webhook"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
